# agents-exe

./: .gitignore  CHANGELOG.md  README.md  agent.json  agents-exe.cfg.json  agents-logfile  agents.cabal  agq.json  cabal.project.freeze  conv.21f2090c-5e30-4d74-99ce-fb59f93c6316.json  conv.2cca3e4a-7b39-46c6-a44c-3b30670bd3d7.json  conv.4f0bcbb0-7359-4687-a16c-5483cd27d62c.json  conv.ca120321-2425-4dd5-8bb1-0ad354156805.json  fix_session.sh  fix_test.sh  git-agent-task.sh  logs.json  mistral-agent.json  openai-agent.json  restore.sh  sqq-agent  sqq-agent.sh
agents/: agentsmith.json  architect.json  devbot.json  documenter.json  faq.json  issuer.json  mcp.json  mistral-agent.json.bak  net-expert.json  notifier.json  oneshot-rlm.json  oneshot.json  openai-agent.json  retro.json  toolsmith.json  web-news.json
agents/tools/: agentsmith.json  date.sh  devbot.json  net-expert.json  toolsmith.json  web-news.json
agq/: CLAUDE.md  Main.hs  README.md
agq/Agq/: Commands.hs  Config.hs  DB.hs  Run.hs  Schedule.hs
agq/docs/: state-machine01.dot
app/: Main.hs
bench/: OSBenchmarks.hs
bundling/: Containerfile.build
dbs/: README.md
dbs/agents_logs/: run-migrations-locally.sh
demo-agents/: kimi-01.json  mistral-01.json  ollama-01.json  openai-01.json
demo-agents/sub-agents/: sub-agent.json
demo-agents/tools/: display-large-text.bash
dev-agents/: agent.json
dev-agents/tools/: check-build.sh  curl-page.sh  get-history-commit.sh  git-diff.sh  grep-files.sh  list-files.sh  list-notes.sh  notify-send.sh  read-files.sh  read-history.sh  read-note.sh  write-file.sh  write-note.sh
docs/: AI-CONTEXT.md  CHANGELOG-OS-MIGRATION.md  ITERATIVE-WORKFLOW.md  MIGRATION-GUIDE.md  MIGRATION-OS.md  OS-API.md  README.md  advanced-configuration.md  ai-assistant-guidelines.md  architecture.md  binary-tool.md  cli-commands.md  cli-reference.md  export-import.md  file-loader.md  internal-tool-mapping.md  logo-01.ascii.txt  lua-toolbox.md  mcp.md  module-docs-graph.dot  sessions.md  sqq-dag.md  sqq-flow.md  tools.md  tui.md
examples/: lua-orchestrator-agent.json
interactive-agents/: kimi-issue-filer.json  kimi-leadarchi.json
interactive-agents/issue-filer-tools/: create-issue.sh
interactive-agents/leadarchi-tools/: create-issue.sh
localdev-agents/: .gitkeep
manual-sessions/: conv.9fb6260f-f793-49ba-ac1e-67568cc6a6ed.json  readme.txt
qa-agent/: kimi-qa.json
qa-agent/tools/: cabal-build  cabal-test  run-agents-exe
repro-tools/lua-toolcalls/: repro.sh  reprolua.py
resources/: documenter-knowledge.db  documenter-knowledge.db-wal  faq.db  faq.db-wal  monstergame.cfg  monstergame.sh  monstergame.sql
resources/ghci/: converse-party.ghci
skills/code-review/: SKILL.md
skills/pdf-processing/: SKILL.md
src/System/: Agents.hs
src/Utils/: List.hs
tasks-agents/: kimi-agent-oneshot.json  kimi-architect.json  kimi-documenter.json
tasks-agents/architect-tools/: create-issue.sh  list-files.sh
tasks-agents/documenter-tools/: generate-graphviz.sh  git-log.sh  grep-files.sh  list-files.sh  read-file.sh  write-file.sh
tasks-agents/oneshot-tools/: check-code.sh  grep-files.sh
tasks-sessions/: document-main-again-again.session.json  document-main-again-again.session.md  document-main-again.session.md  document-sqq-agent.session.json  document-sqq-agent.session.md  document-toolconfigs.session.json  document-toolconfigs.session.md  gh-100.session.json  gh-100.session.md  gh-102.session.json  gh-102.session.md  gh-112.session.json  gh-112.session.md  gh-113.session.json  gh-113.session.md  gh-117.session.json  gh-117.session.md  gh-118.session.json  gh-118.session.md  gh-119.session.json  gh-119.session.md  gh-121.session.json  gh-121.session.md  gh-125.session.json  gh-125.session.md  gh-126.session.json  gh-126.session.md  gh-134.session.json  gh-134.session.md  gh-135.session.json  gh-135.session.md  gh-137.session.json  gh-137.session.md  gh-139.session.json  gh-139.session.md  gh-142.session.json  gh-142.session.md  gh-143.session.json  gh-143.session.md  gh-144.session.json  (+419 more)
tasks-sessions/gh-471/: conv.7cfafbc1-5a03-4eb8-8ce6-40c0647ca3e4.json  conv.bbb1c279-d6bf-4cc1-bb93-a53f6bd26942.json  conv.d7ce935b-1448-434b-a6c1-be0b8651033a.json
tasks-sessions/gh-480/: conv.0a648c17-d7b5-4838-bb35-956aac37bc93.json  conv.a23fc1b8-650f-425d-ac97-a2253fadb718.json  conv.e10b4d0f-3664-4fae-bdbe-60436ea03fe3.json
tasks-sessions/gh-484/: conv.04ddd859-08d0-4279-aaa2-560b75a82577.json
tasks-sessions/gh-485/: conv.df0de93c-4f64-435d-b5f0-fda0056913e3.json
tasks-sessions/gh-488/: conv.46357e7b-abdf-464f-ad8f-a9148bbf15d4.json
tasks-sessions/gh-491/: conv.3a9e659d-fe28-4984-9bc3-260c7c75ae0c.json  conv.640db424-9d4b-4c45-9660-859d4d141f98.json  conv.846212c0-fd1d-49c3-9c1a-4a6821a9aad4.json  conv.88b13757-c389-4fc0-abb8-cf26d229f2ae.json  conv.9700172c-8bdd-442c-83bc-aabcb9e1c147.json  conv.9c91f30c-7612-4145-890b-a603284c66a9.json  conv.b98d42c3-6992-4492-b58b-c89a89db5bc2.json  conv.decc169a-338a-439b-95bb-a2a1d6195a9a.json  conv.df2a7c1c-4ba8-4635-b991-2b085cf59752.json
tasks-sessions/gh-493/: conv.10435dce-9fba-4f34-9014-40286ecfb5b7.json  conv.586db660-83e4-46cc-91dc-ec91c8553e76.json  conv.74259ceb-5377-4171-82e8-4866aa680f61.json  conv.bc6d1b31-feb3-4615-bb43-6404dc06befe.json
tasks-sessions/gh-497/: conv.cdc10fa4-04d8-4bc3-8e6a-05ac5d5a5056.json
tasks-sessions/gh-499/: conv.e8f890e9-34a9-4e6f-a813-fa7500784453.json
tasks-sessions/gh-500/: conv.59c30641-20b5-48ad-a01a-f1ca0c764647.json
tasks-sessions/gh-501/: conv.09e258c6-93c2-47d1-bce3-ff80be8df763.json  (+1 more)
test/: ActivationSessionTests.hs  DeveloperToolboxTests.hs  DeveloperToolboxWriteRangeTests.hs  EndpointPredicateTests.hs  FileReferencesTests.hs  IssueMetadataTests.hs  LuaToolboxHttpTests.hs  LuaToolboxJsonValueTests.hs  LuaToolboxSecurityTests.hs  LuaToolboxTests.hs  Main.hs  McpImplementationTests.hs  OpenAPIToolboxTests.hs  ParseTest.hs  PostgRESTParseTest.hs  SessionEditTests.hs  SessionPrintTests.hs  SkillsTests.hs  ToolPortalTests.hs
test/OS/: CompatTests.hs  ConcurrentTests.hs  (+8 more)
tools/: net-expert.json
(+358 files in other folders)
