cabal-version:      3.0
name:               agents
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: docs/binary-tool.md

copyright:          2024 Lucas DiCioccio
synopsis:           An agent framework for building AI-assisted workflows
description:
    A Haskell framework for building AI agents with support for multiple LLM
    providers, tool systems (bash, MCP, OpenAPI, SQLite, etc.), and a TUI.

common warnings
    ghc-options: -Wall -Werror

library agents-lib
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings, OverloadedRecordDot
    exposed-modules:  System.Agents
                    , System.Agents.AgentTree
                    , System.Agents.AgentTree.OneShotTool
                    , System.Agents.ApiKeys
                    , System.Agents.Base
                    , System.Agents.CLI.Aliases
                    , System.Agents.CLI.Base
                    , System.Agents.CLI.Check
                    , System.Agents.CLI.CheckToolCall
                    , System.Agents.CLI.Cowsay
                    , System.Agents.CLI.DescribeTool
                    , System.Agents.CLI.EchoPrompt
                    , System.Agents.CLI.Initialize
                    , System.Agents.CLI.InitProject
                    , System.Agents.CLI.McpServer
                    , System.Agents.CLI.New
                    , System.Agents.CLI.OneShot
                    , System.Agents.CLI.Paths
                    , System.Agents.CLI.PromptScript
                    , System.Agents.CLI.ReplayToolCall
                    , System.Agents.CLI.SelfDescribe
                    , System.Agents.CLI.SessionEdit
                    , System.Agents.CLI.Spec
                    , System.Agents.CLI.ToolCall
                    , System.Agents.CLI.TraceUtils
                    , System.Agents.CLI.TUI
                    , System.Agents.FileLoader
                    , System.Agents.FileLoader.JSON
                    , System.Agents.FileNotification
                    , System.Agents.OS.Concurrent
                    , System.Agents.OS.Concurrent.Locks
                    , System.Agents.OS.Concurrent.Types
                    , System.Agents.OS.Core
                    , System.Agents.OS.Core.Types
                    , System.Agents.OS.Core.World
                    , System.Agents.OS.Resources
                    , System.Agents.OS.Resources.Types
                    , System.Agents.OS.Resources.Sqlite
                    , System.Agents.OS.Resources.Lua
                    , System.Agents.OS.Resources.Http
                    , System.Agents.ToolPortal
                    , System.Agents.ToolRegistration
                    , System.Agents.Tools
                    , System.Agents.Tools.Context
                    , System.Agents.Tools.Trace
                    , System.Agents.Tools.Base
                    , System.Agents.Tools.Bash
                    , System.Agents.Tools.BashToolbox
                    , System.Agents.Tools.DeveloperToolbox
                    , System.Agents.Tools.EndpointPredicate
                    , System.Agents.Tools.IO
                    , System.Agents.Tools.LuaToolbox
                    , System.Agents.Tools.LuaToolbox.Utils
                    , System.Agents.Tools.LuaToolbox.Modules.Fs
                    , System.Agents.Tools.LuaToolbox.Modules.Http
                    , System.Agents.Tools.LuaToolbox.Modules.Json
                    , System.Agents.Tools.LuaToolbox.Modules.Text
                    , System.Agents.Tools.LuaToolbox.Modules.Time
                    , System.Agents.Tools.McpToolbox
                    , System.Agents.Tools.OpenAPI.Types
                    , System.Agents.Tools.OpenAPI.Resolver
                    , System.Agents.Tools.OpenAPI.Converter
                    , System.Agents.Tools.OpenAPIToolbox
                    , System.Agents.Tools.PostgREST.Types
                    , System.Agents.Tools.PostgREST.Converter
                    , System.Agents.Tools.PostgRESToolbox
                    , System.Agents.Tools.Skills.Types
                    , System.Agents.Tools.Skills.Parser
                    , System.Agents.Tools.Skills.Source
                    , System.Agents.Tools.Skills.State
                    , System.Agents.Tools.Skills.Toolbox
                    , System.Agents.Tools.SqliteToolbox
                    , System.Agents.Tools.SystemToolbox
                    , System.Agents.Tools.Validation
                    , System.Agents.LLMs.OpenAI
                    , System.Agents.Runtime
                    , System.Agents.Runtime.Runtime
                    , System.Agents.Runtime.Trace
                    , System.Agents.Session.Types
                    , System.Agents.Session.Base
                    , System.Agents.Session.Edit
                    , System.Agents.Session.OpenAI
                    , System.Agents.Session.Loop
                    , System.Agents.Session.Step
                    , System.Agents.SessionPrint
                    , System.Agents.SessionPrint.Inject
                    , System.Agents.SessionStore
                    , System.Agents.HttpClient
                    , System.Agents.HttpLogger
                    , System.Agents.OneShot
                    , System.Agents.MCP.Base
                    , System.Agents.MCP.Client
                    , System.Agents.MCP.Client.Runtime
                    , System.Agents.MCP.Server
                    , System.Agents.MCP.Server.Runtime
                    , System.Agents.TUI.Core
                    , System.Agents.TUI.Types
                    , System.Agents.TUI.Render
                    , System.Agents.TUI.Event
                    , System.Agents.TraceUtils
                    , System.Agents.ToolSchema
    build-depends:    base  >=4.18.3.0,
                      aeson >=2.2.0.0,
                      aeson-pretty,
                      async,
                      base64-bytestring,
                      brick,
                      bytestring,
                      case-insensitive,
                      conduit,
                      conduit-extra,
                      containers,
                      contravariant,
                      data-clist,
                      direct-sqlite,
                      directory,
                      extra,
                      file-embed,
                      filepath,
                      formatting,
                      free,
                      hashable,
                      haskeline,
                      hslua,
                      hslua-marshalling,
                      http-client,
                      http-client-tls,
                      http-types,
                      indexed-traversable,
                      json-rpc,
                      lens,
                      network-uri,
                      monad-logger,
                      mtl,
                      process,
                      process-extras,
                      prodapi,
                      fsnotify,
                      regex-tdfa,
                      scientific,
                      sqlite-simple,
                      stm,
                      stm-chans,
                      stm-conduit,
                      temporary,
                      text,
                      text-zipper,
                      time,
                      unix,
                      unliftio,
                      unordered-containers,
                      uuid,
                      vector,
                      vty,
                      yaml

executable agents-exe
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded
    build-depends:    base  >=4.18.3.0,
                      agents-lib,
                      aeson,
                      aeson-pretty,
                      bytestring,
                      containers,
                      contravariant,
                      directory,
                      filepath,
                      text,
                      process,
                      prodapi,
                      optparse-applicative,
                      time,
                      temporary,
                      unix
    hs-source-dirs:   app
    default-language: Haskell2010

executable agq
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded
    other-modules:    Agq.Config
                    , Agq.DB
                    , Agq.Schedule
                    , Agq.Run
                    , Agq.Commands
    build-depends:    base >=4.18.3.0,
                      aeson,
                      aeson-pretty,
                      async,
                      bytestring,
                      containers,
                      directory,
                      filepath,
                      optparse-applicative,
                      process,
                      scientific,
                      sqlite-simple,
                      text,
                      time,
                      unix
    hs-source-dirs:   agq
    default-language: Haskell2010
    default-extensions: OverloadedStrings, OverloadedRecordDot

test-suite agents-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    EndpointPredicateTests
                    , LuaToolboxSecurityTests
                    , LuaToolboxTests
                    , LuaToolboxJsonValueTests
                    , LuaToolboxHttpTests
                    , McpImplementationTests
                    , OpenAPIToolboxTests
                    , OS.ConcurrentTests
                    , OS.CoreTests
                    , OS.ResourcesTests
                    , PostgRESTParseTest
                    , SessionEditTests
                    , SessionPrintTests
                    , SkillsTests
                    , ToolPortalTests
    default-language: Haskell2010
    default-extensions: OverloadedStrings, OverloadedRecordDot
    build-depends:    base >=4.18.3.0,
                      agents-lib,
                      aeson,
                      bytestring,
                      containers,
                      directory,
                      filepath,
                      hashable,
                      hslua,
                      prodapi,
                      stm,
                      text,
                      tasty,
                      tasty-hunit,
                      temporary,
                      time,
                      unordered-containers,
                      vector


